design-principles-02/src/main/java/com/farhad/example/design_principles02/dessert/bad/topping/Caramel.java
package com.farhad.example.design_principles02.dessert.bad.topping;

public class Caramel extends Syrup {

	public Caramel(String description, String[] ingredients) {
		super(description, ingredients);
	}

}
